# Harness

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HARNESS.md  PLAN.md  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  enforce-pr-only.yml  release.yml
bench/: README.md  claude.sh  harness.sh  run.sh
bench/prompts/: cold_start.txt  glob_scan.txt  grep_summary.txt  refactor.txt
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: config_import.rs  doctor.rs  line_mode.rs  logfile.rs  main.rs  metrics.rs  models.rs  prompt.rs  redact.rs  subagent_host.rs  trust.rs  tui_bridge.rs
crates/harness-cli/tests/: config_import.rs  e2e_ask.rs
crates/harness-cli/tests/fake_anthropic/: mod.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: compaction.rs  config.rs  engine.rs  hooks.rs  lib.rs  memory.rs  plan_gate.rs  provider.rs  subagent.rs  tool.rs  turn.rs  tx.rs
crates/harness-core/tests/: engine_testkit.rs
crates/harness-mem/: Cargo.toml
crates/harness-mem/src/: lib.rs  redact.rs
crates/harness-perm/: Cargo.toml
crates/harness-perm/src/: lib.rs
crates/harness-proto/: Cargo.toml
crates/harness-proto/src/: lib.rs
crates/harness-provider/: Cargo.toml
crates/harness-provider/src/: anthropic.rs  egress_redact.rs  lib.rs  oauth.rs  openai.rs  sse.rs
crates/harness-testkit/: Cargo.toml
crates/harness-testkit/src/: lib.rs
crates/harness-token/: Cargo.toml
crates/harness-token/src/: lib.rs
crates/harness-tools/: Cargo.toml
crates/harness-tools/src/: bash.rs  bash_output.rs  bg_registry.rs  common.rs  diff_exec.rs  edit.rs  fs_safe.rs  glob.rs  grep.rs  import_trace.rs  kill_shell.rs  lib.rs  mybatis_parser.rs  proc.rs  read.rs  rollback.rs  subagent.rs  test_runner.rs  tx.rs  write.rs
crates/harness-tools/tests/: turnloop_e2e.rs
crates/harness-tui/: Cargo.toml
crates/harness-tui/src/: app.rs  event.rs  event_loop.rs  input.rs  lib.rs  markdown.rs  render.rs
docs/local-llm/: README.md  llama-cpp.md  lm-studio.md  mlx.md  ollama.md  vllm.md
docs/security/: egress-redaction.md  home-env.md
scripts/git-hooks/: pre-push
templates/github/: enforce-pr-only.yml
templates/settings/: README.md  _base.json  ansible.json  generic.json  java.json  plpgsql.json  python.json  typescript.json
templates/settings/hooks/: dbwrite_guard.sh  git_push_guard.sh
