[package]
name         = "harness-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Harness CLI binary"

[lints]
workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[features]
default = []
tui     = ["dep:harness-tui"]

[dependencies]
harness-core     = { workspace = true }
harness-proto    = { workspace = true }
harness-tools    = { workspace = true }
harness-provider = { workspace = true }
harness-mem      = { workspace = true }
harness-token    = { workspace = true }
harness-perm     = { workspace = true }
harness-tui      = { workspace = true, optional = true }

clap = { workspace = true }

tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util"] }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
async-trait        = { workspace = true }
regex              = { workspace = true }
chrono             = { workspace = true }
sha2               = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
