[package]
name         = "harness-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Harness: terminal coding agent CLI — faster alternative to Claude Code for legacy backend refactoring."
readme       = "../../README.md"
keywords     = ["llm", "agent", "cli", "coding"]
categories   = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[features]
default = []
tui     = ["dep:harness-tui"]
# Opt-in: re-use a Claude Code OAuth token from the macOS keychain as the
# `/v1/messages` credential. Off by default — see `harness-provider`'s
# same-named feature for rationale.
claude-code-oauth = ["harness-provider/claude-code-oauth"]

[dependencies]
harness-core     = { workspace = true }
harness-proto    = { workspace = true }
harness-tools    = { workspace = true }
harness-provider = { workspace = true }
harness-mem      = { workspace = true }
harness-token    = { workspace = true }
harness-perm     = { workspace = true }
harness-tui      = { workspace = true, optional = true }

clap = { workspace = true }

tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util"] }
tokio-util         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
async-trait        = { workspace = true }
regex              = { workspace = true }
chrono             = { workspace = true }
url                = { workspace = true }
sha2               = "0.11"

[dev-dependencies]
tempfile   = { workspace = true }
assert_cmd = "2"
nix        = { workspace = true, features = ["signal"] }
url        = { workspace = true }
