[package]
name         = "harness-mem"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Append-only session JSONL store with exclusive-lock semantics for Harness."
readme       = "../../README.md"
keywords     = ["llm", "agent", "session"]
categories   = ["filesystem", "caching"]

[lints]
workspace = true

[dependencies]
harness-proto = { workspace = true }
redb          = { workspace = true }
fs4           = { workspace = true }
etcetera      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
chrono        = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true, features = ["fs", "io-util", "sync", "rt"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt", "fs", "io-util"] }
