[package]
name         = "harness-proto"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Harness wire-protocol types (leaf crate)"

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
