[package]
name         = "harness-proto"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Wire protocol types for the Harness coding agent (Message, ContentBlock, Usage, SessionId)."
readme       = "../../README.md"
keywords     = ["llm", "agent", "anthropic"]
categories   = ["api-bindings", "data-structures"]

[lints]
workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
