[package]
name         = "harness-provider"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Anthropic Messages API client + OpenAI-compatible provider + SSE parser for Harness."
readme       = "../../README.md"
keywords     = ["llm", "anthropic", "openai", "sse"]
categories   = ["api-bindings", "asynchronous"]

[lints]
workspace = true

[features]
default = []

[dependencies]
harness-proto = { workspace = true }
harness-core  = { workspace = true }

reqwest      = { workspace = true }
tokio        = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
futures-core = { workspace = true }
futures-util = { workspace = true }
async-trait  = { workspace = true }
bytes        = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

secrecy   = { workspace = true }
backon    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
url       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
