[package]
name         = "harness-testkit"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Harness test utilities: mock Provider + StreamEvent constructors"

[lints]
workspace = true

[dependencies]
harness-core  = { workspace = true }
harness-proto = { workspace = true }

async-trait  = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
