[package]
name         = "harness-token"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Harness token counting + budget"

[lints]
workspace = true

[dependencies]
harness-proto = { workspace = true }
tiktoken-rs   = { workspace = true }
thiserror     = { workspace = true }
