[package]
name         = "harness-token"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Token counting (tiktoken-rs) and budget tracking for Harness."
readme       = "../../README.md"
keywords     = ["llm", "tiktoken", "tokens"]
categories   = ["text-processing"]

[lints]
workspace = true

[dependencies]
harness-proto = { workspace = true }
tiktoken-rs   = { workspace = true }
thiserror     = { workspace = true }
