[package]
name         = "harness-tui"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Optional ratatui-based TUI for Harness interactive sessions."
readme       = "../../README.md"
keywords     = ["llm", "tui", "ratatui"]
categories   = ["command-line-interface"]

[lints]
workspace = true

[dependencies]
harness-proto = { workspace = true }
harness-core  = { workspace = true }
harness-perm  = { workspace = true }

ratatui   = { workspace = true }
crossterm = { workspace = true }
tokio     = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow    = { workspace = true }
tracing   = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
